objects/ssot__AiAgentTagAssociation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentInteractionId__c</fullName>
        <label>AI Agent Interaction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentMomentId__c</fullName>
        <label>AI Agent Moment Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionId__c</fullName>
        <label>AI Agent Session Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentTagDefinitionAssociationId__c</fullName>
        <label>AI Agent Tag Definition Association Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentTagId__c</fullName>
        <label>AI Agent Tag Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociationReasonText__c</fullName>
        <label>Association Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Tag Association Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1749145957856_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentTagAssociation_AiAgentMomentI_rel</label>
        <referenceTo>ssot__AiAgentMoment__dlm</referenceTo>
        <relationshipLabel>AiAgentTagAssociation_AiAgentMomentI_rel</relationshipLabel>
        <relationshipName>rel_1749145957856_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1749145958720_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentTagAssociation_AiAgentTagId_m_rel</label>
        <referenceTo>ssot__AiAgentTag__dlm</referenceTo>
        <relationshipLabel>AiAgentTagAssociation_AiAgentTagId_m_rel</relationshipLabel>
        <relationshipName>rel_1749145958720_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1749145967292_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentTagAssociation_AiAgentSession_rel</label>
        <referenceTo>ssot__AiAgentSession__dlm</referenceTo>
        <relationshipLabel>AiAgentTagAssociation_AiAgentSession_rel</relationshipLabel>
        <relationshipName>rel_1749145967292_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>